# gitsync

./: .gitignore  Containerfile  Makefile  README.md  compose.yml  requirements.txt  setup.cfg  setup.py
.cursor/rules/: base.mdc  git.mdc  python.mdc  testing.mdc
.github/workflows/: build-and-push.yml
example/: gitsync.yml  nginx.conf
gitsync/: Containerfile  gitsync.py
preoccupied/gitsync/: __init__.py  app.py  config.py  github.py  gitsync.py
tests/: __init__.py  conftest.py  test_app.py  test_config.py  test_github.py  test_gitsync.py
