[metadata]
name = preoccupied.gitsync
version = 0.1.0

description = Git sync server for GitHub repositories.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/obriencj/gitsync

author = Christopher O'Brien
# O'Brien breaks a lot of tools.
author_email = obriencj@preoccupied.net

license = GNU General Public License v3
license_files =
    LICENSE

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Typing :: Typed


[options]
packages = find_namespace:
install_requires =
    cryptography
    fastapi
    httpx
    pydantic>=2,<3
    pyjwt
    pyyaml
    requests
    uvicorn

python_requires = >=3.10
include_package_data = False
zip_safe = False


[options.packages.find]
where = .
include = preoccupied.*


[tox:tox]
envlist = py,flake8


[testenv]
basepython = python3
deps =
    pytest
commands =
    pytest {posargs:tests}


[testenv:flake8]
basepython = python3
deps =
    flake8
commands =
    flake8 preoccupied {posargs}


[testenv:build]
basepython = python3
deps =
    build
commands =
    python -m build {posargs}


[flake8]
exclude = .tox,.venv,build,dist,htmlcov,logs,tmp,tests
max-line-length = 120
select = E,F,W,B,B950
ignore = E203,E501,W503,E303


# The end.
